[gd_scene load_steps=5 format=2]

[ext_resource path="res://Soldiers/SoldierItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Soldiers/VisualSoldier.gd" type="Script" id=2]
[ext_resource path="res://Radar/ShipRadar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 14.4871

[node name="VisualSoldier" type="Area2D"]
script = ExtResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
scale = Vector2( 0.9, 0.9 )
z_index = 1
shape = SubResource( 1 )

[node name="SoldierItem" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.07, 0.07 )
z_index = 1
collision_layer = 0
collision_mask = 2

[node name="ShipRadar" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="_on_VisualSoldier_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_VisualSoldier_body_entered"]
[connection signal="ShipDetected" from="ShipRadar" to="." method="_on_ShipRadar_ShipDetected"]
[connection signal="ShipRadarExited" from="ShipRadar" to="." method="_on_ShipRadar_ShipRadarExited"]
